--- a/tpmvc/WebContent/WEB-INF/web.xml
+++ b/tpmvc/WebContent/WEB-INF/web.xml
@@ -2,16 +2,7 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
 	<display-name>spring-blank</display-name>
-	
-	<filter>
-		<filter-name>injectedFilter</filter-name>
-		<filter-class>ar.edu.uces.progweb2.tpmvc.controller.filter.InjectedDependencyFilter</filter-class>
-	</filter>
-	<filter-mapping>
-		<filter-name>injectedFilter</filter-name>
-		<url-pattern>*.htm</url-pattern>
-	</filter-mapping>
-	
+
 	<servlet>
 		<servlet-name>appServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -23,12 +14,9 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>appServlet</servlet-name>
-		<url-pattern>*.htm</url-pattern>
+		<url-pattern>*.do</url-pattern>
 	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>appServlet</servlet-name>
-		<url-pattern>/services/*</url-pattern>
-	</servlet-mapping>
+
 
 	<!-- To inject dependencies in Filter -->
 	<listener>
