--- a/tpmvc/src/resources/conf/mensajes.properties
+++ b/tpmvc/src/resources/conf/mensajes.properties
@@ -1,2 +1,4 @@
 partida.label.valorElegido=Seleccionar Valor
+jugador.label.identifiquese=Ingrese su nombre
 error.intento.valor.noAcertado=le pifiaste
+error.jugador.valor.vacio=debe ingresar su nombre
