--- a/tpmvc/src/resources/mensajes.properties
+++ b/tpmvc/src/resources/mensajes.properties
@@ -1,4 +1,5 @@
 partida.label.valorElegido=Seleccionar Valor
 jugador.label.identifiquese=Ingrese su nombre
 error.intento.valor.noAcertado=le pifiaste
-error.jugador.valor.vacio=debe ingresar su nombre
+error.jugador.valor.vacio=Debe ingresar su nombre
+error.jugador.valor.comienzaConNumero=Su nombre debe comenzar con una letra
