--- a/tpmvc/WebContent/WEB-INF/web.xml
+++ b/tpmvc/WebContent/WEB-INF/web.xml
@@ -27,6 +27,6 @@
 		<param-value>/WEB-INF/spring/context.xml</param-value>
 	</context-param>
 	<welcome-file-list>
-		<welcome-file>jsp/index.jsp</welcome-file>
+		<welcome-file>views/index.jsp</welcome-file>
 	</welcome-file-list>
 </web-app>
